apps/media/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  annotations:
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/description: Indexers management
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: prowlarr.png
    gethomepage.dev/pod-selector: "app=prowlarr"
spec:
  tls:
    - hosts:
        - prowlarr.totorinho.duckdns.org
      secretName: duckdns-wildcard-cert-totorinho.duckdns.org
  rules:
  - host: prowlarr.totorinho.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
